# aisage-azure-pnp

./: README.md  aiSagePnP.deb
debianPackage/aiSagePnP/DEBIAN/: control
debianPackage/aiSagePnP/usr/local/azurePnP/: aiSagePnP
deviceCode/: CMakeLists.txt  Readme.md  main.c  pnp_device.c  pnp_device.h  sample_device_impl.c  sample_device_impl.h
deviceCode/utilities/: deviceinfo_interface.c  deviceinfo_interface.h  digitaltwin_client_helper.c  digitaltwin_client_helper.h  digitaltwin_serializer.c  digitaltwin_serializer.h  sensor_interface.c  sensor_interface.h
